used container class div to display some headings/para

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <title>Materializecss Tutorial</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>h1 dahyun</h1>
+        <h2>h2 nayeon</h2>
+        <h3>h3 momo</h3>
+        <h4>h4 sana</h4>
+        <h5>h5 mina</h5>
+        <h6>h6 chaeyoung</h6>
+        <p>p tzuyu</p>
+        <p class="flow-text">p.flow-text</p>
+    </div>
 </body>
 </html>
