examples of hiding based on screen size

--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@
         <p>p tzuyu</p>
         <p class="flow-text">p.flow-text</p>
     </div>
+
+    <div class="container">
+        <h4 class="hide">Hide me on all screen sizes</h4>
+        <h4 class="hide-on-small-only">Hide me on small screen sizes</h4>
+        <h4 class="hide-on-med-only">Hide me on medium screen sizes</h4>
+        <h4 class="hide-on-large-only">Hide me on large screen sizes</h4>
+        <h4 class="hide-on-med-and-down">Hide me on medium & small screen sizes</h4>
+        <h4 class="hide-on-med-and-up">Hide me on medium and large screen sizes</h4>
+      </div>
 </body>
 </html>
