--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
         <h4 class="hide-on-med-and-down">Hide me on medium & small screen sizes</h4>
         <h4 class="hide-on-med-and-up">Hide me on medium and large screen sizes</h4>
       </div>
+
+      <div class="container">
+        <h5 class="light-blue darken-1">Be yourself, everyone else is already taken</h5>
+        <h5 class="orange lighten-4">We are all in the gutter, but some of us are looking at the stars</h5>
+        <h5 class="purple darken-3 white-text">To live is the rarest thing in the world. Most people exist, that is all</h5>
+        <h5 class="teal darken-2 yellow-text text-lighten-3">Experience is simply the name we give our mistakes</h5>
+        <h5 class="yellow lighten-3 purple-text text-darken-2">Always forgive your enemies - nothing annoys them so much</h5>
+      </div>
 </body>
 </html>
