--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!-- Materializecss Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Materializecss Tutorial</title>
+    <style>
+        .box {
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -38,6 +43,20 @@
         <h5 class="purple darken-3 white-text">To live is the rarest thing in the world. Most people exist, that is all</h5>
         <h5 class="teal darken-2 yellow-text text-lighten-3">Experience is simply the name we give our mistakes</h5>
         <h5 class="yellow lighten-3 purple-text text-darken-2">Always forgive your enemies - nothing annoys them so much</h5>
+      </div>
+
+      <div class="container">
+        <h5 class="center-align">Center alignment</h5>
+        <h5 class="left-align">Left alignment</h5>
+        <h5 class="right-align">Right alignment</h5>
+      </div>
+    
+      <div class="container grey lighten-2 box valign-wrapper">
+          <h5>Vertical alignment</h5>
+      </div>
+    
+      <div class="container">
+        <p class="truncate">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec sem dictum, consectetur ex vitae, feugiat quam. Sed quis sodales urna. Donec tincidunt faucibus diam a ullamcorper.</p>
       </div>
 </body>
 </html>
