--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 </head>
 <body>
     <div class="container">
+        <h4>Buttons</h4>
+        <a href="#" class="btn waves-effect waves-light">Normal button with waves effect</a>
+        <a href="#" class="btn-small">Small button</a>
+        <a href="#" class="btn-large">Large button</a>
+        <a href="#" class="btn indigo waves-effect waves-light">Indigo button with waves effect</a>
+        <a href="#" class="btn disabled">Disabled button</a>
+        <h4>Floating button</h4>
+        <a href="#" class="btn-floating pulse pink"></a>
+        <h4>Other elements</h4>
+        <div class="btn">I am a div tag</div>
+    </div>
+
+    <div class="container">
         <h1>h1 dahyun</h1>
         <h2>h2 nayeon</h2>
         <h3>h3 momo</h3>
@@ -60,16 +73,31 @@
       </div>
 
       <div class="container">
-        <h4>Buttons</h4>
-        <a href="#" class="btn waves-effect waves-light">Normal button with waves effect</a>
-        <a href="#" class="btn-small">Small button</a>
-        <a href="#" class="btn-large">Large button</a>
-        <a href="#" class="btn indigo waves-effect waves-light">Indigo button with waves effect</a>
-        <a href="#" class="btn disabled">Disabled button</a>
-        <h4>Floating button</h4>
-        <a href="#" class="btn-floating pulse pink"></a>
-        <h4>Other elements</h4>
-        <div class="btn">I am a div tag</div>
+        <h4>Icons</h4>
+        <i class="material-icons red-text">error</i>
+        <i class="material-icons yellow-text text-darken-2">warning</i>
+        <i class="material-icons grey-text">cloud</i>
+        <i class="material-icons light-blue-text">folder</i>
+        <h4>Icons on Buttons</h4>
+        <a href="#" class="btn indigo">
+          <span>Send</span>
+          <i class="material-icons right">send</i>
+        </a>
+        <a href="#" class="btn pink waves-effect waves-light">
+          <span>Email</span>
+          <i class="material-icons left">email</i>
+        </a>
+        <h4>Icons on Floating Buttons</h4>
+        <a href="#" class="btn-floating light-blue">
+          <i class="material-icons">add</i>
+        </a>
+        <a href="#" class="btn-floating red">
+          <i class="material-icons">remove</i>
+        </a>
+        <a href="#" class="btn-floating orange pulse">
+          <i class="material-icons">edit</i>
+        </a>
+        <p>All icons at <a href="https://material.io/resources/icons/?style=baseline">https://material.io/resources/icons/?style=baseline</a></p>
       </div>
 </body>
 </html>
