--- a/gridSystem.html
+++ b/gridSystem.html
@@ -10,8 +10,48 @@
     <!-- Materializecss Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Materializecss Tutorial</title>
+    <style>
+        .row > div{
+      padding: 10px;
+      background: #ddd;
+      border: 1px solid #fff;
+    }
+    .row{
+      margin: 40px auto;
+    }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <h4>Grids</h4>
+        <p>a row is 12 units across. each column can speficy how many units big it should be.</p> 
+        <p>can change depending on screen size s m l xl</p>
+        <div class="row">
+          <div class="col s3">s3content</div>
+          <div class="col s3">s3content</div>
+          <div class="col s3">s3content</div>
+          <div class="col s3">s3content</div>
+        </div>
+        <div class="row">
+          <div class="col s6 m3">s6m3content</div>
+          <div class="col s6 m3">s6m3content</div>
+          <div class="col s6 m3">s6m3content</div>
+          <div class="col s6 m3">s6m3content</div>
+        </div>
+        <div class="row">
+          <div class="col s12 m6 l4 xl2">s12m6l4xl2content</div>
+          <div class="col s12 m6 l4 xl2">s12m6l4xl2content</div>
+          <div class="col s12 m6 l4 xl2">s12m6l4xl2content</div>
+          <div class="col s12 m6 l4 xl2">s12m6l4xl2content</div>
+          <div class="col s12 m6 l4 xl2">s12m6l4xl2content</div>
+          <div class="col s12 m6 l4 xl2">s12m6l4xl2content</div>
+        </div>
+        <div class="row">
+          <div class="col s12 m8">s12m8content</div>
+          <div class="col s12 m4">s12m4content</div>
+          <div class="col s12 m4">s12m4content</div>
+          <div class="col s12 m8">s12m8content</div>
+        </div>
+      </div>
 </body>
 </html>
