start card examples, correct explanation of grid system.

--- a/gridSystem.html
+++ b/gridSystem.html
@@ -24,8 +24,9 @@
 <body>
     <div class="container">
         <h4>Grids</h4>
-        <p>a row is 12 units across. each column can speficy how many units big it should be.</p> 
-        <p>can change depending on screen size s m l xl</p>
+        <p>a row is 12 units across. each column can specify how many units big it should be</p> 
+        <p>on a specified screen size. s12 = this column would be 12 units in size on small screens.</p>
+        <p>adding two sizes 's12 m6' means on medium devices the column would take up 6 units, on small 12 untis.</p>
         <div class="row">
           <div class="col s3">s3content</div>
           <div class="col s3">s3content</div>
