changed some spelling

--- a/basics.html
+++ b/basics.html
@@ -10,6 +10,7 @@
     <!-- Materializecss Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Materializecss Tutorial</title>
+    <!-- custom class and style to emphasize example -->
     <style>
         .box {
             height: 200px;
@@ -17,9 +18,10 @@
     </style>
 </head>
 <body>
+  <!-- container has custom margins for content inside -->
     <div class="container">
         <h4>Buttons</h4>
-        <a href="#" class="btn waves-effect waves-light">Normal button with waves effect</a>
+        <a href="#" class="btn waves-effect waves-light">Normal button click for added waves effect</a>
         <a href="#" class="btn-small">Small button</a>
         <a href="#" class="btn-large">Large button</a>
         <a href="#" class="btn indigo waves-effect waves-light">Indigo button with waves effect</a>
@@ -38,7 +40,7 @@
         <h5>h5 mina</h5>
         <h6>h6 chaeyoung</h6>
         <p>p tzuyu</p>
-        <p class="flow-text">p.flow-text</p>
+        <p class="flow-text">flow-text</p>
     </div>
 
     <div class="container">
