added note to badges about custom styling

--- a/navbarBadges.html
+++ b/navbarBadges.html
@@ -8,6 +8,7 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <title>Learning Materialize</title>
+  <!-- custom style to move the badge a little bit -->
   <style>
     nav .badge{
       position: relative;
