--- a/projectExample.html
+++ b/projectExample.html
@@ -10,11 +10,26 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <title>Photo Ninja</title>
+  <style>
+      header {
+          background: url(img/tzuyu.jpg);
+          background-size: cover;
+          background-position: center;
+          min-height: 1000px;
+      }
+      @media screen and (maxwidth: 670px){
+          header {
+              min-height: 500px;
+          }
+      }
+  </style>
 </head>
 <body>
 
   <!-- navbar -->
+    <header>
 
+    </header>
   <!-- photo / grid -->
 
   <!-- parallax -->
