--- a/projectExample.html
+++ b/projectExample.html
@@ -28,7 +28,17 @@
 
   <!-- navbar -->
     <header>
-
+        <nav class="nav-wrapper transparent">
+            <div class="container">
+                <a href="" class="brand-logo">Brand logo</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
   <!-- photo / grid -->
 
